# sotugyo

./: .gitignore  LICENSE  README.md  sotugyo.cabal
app/: Coins12.hs  Main.hs  Problem.hs
