name:                sotugyo
version:             0.1.0.0
homepage:            https://github.com/tak3n0k0/tani2#readme
license:             BSD3
license-file:        LICENSE
author:              Takenoko
copyright:           2017 Takenoko
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable sotugyo
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Problem, Coins12
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , csv
                     , yaml
                     , containers
                     , text
                     , sbv
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tak3n0k0/sotugyo

